# infra-alerts

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  monitor.yml
.os/: README.md
.os/scripts/: validate_change.py
.os/templates/: acceptance.md  assumptions.md  design_contract.md  eval_contract.md  ops_contract.md  options.md  risk_register.md  rollback.md  spec.md
changes/: README.md
src/infra_alerts/: __init__.py  config.py  digest.py  fetcher.py  models.py  run_monitor.py  state.py
src/infra_alerts/alerting/: __init__.py  email.py  slack.py
src/infra_alerts/monitors/: __init__.py  betterstack.py  changelog.py  github_docs.py  sitemap.py  status.py  tweets.py
state/: state.json
tests/: test_alerting.py  test_betterstack.py  test_digest.py  test_monitors.py  test_state.py  test_version_alerts.py
