[project]
name = "infra-alerts"
version = "0.2.0"
description = "Verefy infrastructure monitoring and alerting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.27.0",
  "selectolax>=0.3.21",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "mypy>=1.13.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra_alerts"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = ["infra_alerts"]
